Changed the  way the margins work
Went from a pixel style to a percentage based
margin to keep everything in line when resizing
the webpage.

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ a {
 
 .center {
     text-align: left;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-left: 25%;
+    margin-right: 25%;
     list-style-position: inside;
 }
